mariadb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: mariadb
        image: mariadb
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "800m"
            memory: "800Mi"
          requests:
            cpu: "200m"
            memory: "400Mi"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: config
          mountPath: /config
      - name: phpmyadmin   
        image: phpmyadmin
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
