mariadb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: NodePort
  ports:
    - name: db-port
      port: 3306
      targetPort: 3306
      nodePort: 30306
    - name: admin-port
      port: 80
      targetPort: 80
      nodePort: 30888
